--- a/site.css
+++ b/site.css
@@ -5,14 +5,14 @@ html, body{
 
 .header{
     width: 100%;
-    height: 80px;
+    height: 90px;
     text-align: center;
     background-color: #001a66;
     color: #ccc;
 }
 
-.header h1{
-    line-height: 80px;
+.header a{
+    color: #fff;
 }
 
 .body{
